Optimizer almost done. Compiles but won't run.

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,10 +1,10 @@
-# makefile for Kona library
+# makefile for the Aero-Struct MDF Optimization project
 
 SHELL = /bin/sh
 
 .SUFFIXES:
 .SUFFIXES: .cpp .o
-.PHONY: default call tags MDA_test clean
+.PHONY: default call tags MDA_test optimize clean
 
 # compiler
 CXX= gcc 
@@ -25,25 +25,22 @@ LDFLAGS= -lstdc++ -llapack -L. -lboost_program_options -lm -L$(KONA_ROOT) -lkona
 ALL_CXXFLAGS= -I. $(CXXFLAGS) -I$(BOOST_ROOT) -I$(KONA_ROOT)/src
 
 # directories
-CFD_DIR=./quasi_1d_euler
-CSM_DIR=./linear_elastic_csm
+CFD_DIR=../quasi_1d_euler/
+CSM_DIR=../linear_elastic_csm/
 
 # headers
-CFD_HEADERS= $(CFD_DIR)/*.hpp
-CSM_HEADERS= $(CSM_DIR)/*.hpp
+CFD_HEADERS= $(CFD_DIR)*.hpp
+CSM_HEADERS= $(CSM_DIR)*.hpp
 
 # source files
-CFD_SRC= $(CFD_DIR)/*.cpp
-CSM_SRC= $(CSM_DIR)/*.cpp
+CFD_SRC= $(CFD_DIR)*.cpp
+CSM_SRC= $(CSM_DIR)*.cpp
 
 # source and object file names
-HEADERS= $(wildcard $(CFD_HEADERS) $(CSM_HEADERS) ./*.hpp)
-HEADERS_ALL= $(HEADERS)
-SOURCES= $(wildcard $(CFD_SRC) $(CSM_SRC) ./*.cpp)
-SOURCES_ALL= $(SOURCES)
+HEADERS= $(wildcard $(CFD_HEADERS) $(CSM_HEADERS) ../*.hpp)
+SOURCES= $(wildcard $(CFD_SRC) $(CSM_SRC) ../*.cpp)
 OBJS= $(SOURCES:.cpp=.o)
-OBJS_ALL= $(SOURCES_ALL:.cpp=.o)
-BINARIES= MDA_test.bin
+BINARIES= MDA_test.bin optimize.bin
 
 # implicit rule
 %.o : %.cpp $(HEADERS_ALL) Makefile
@@ -59,9 +56,13 @@ tags: $(HEADERS) $(SOURCES)
 	@find -maxdepth 2 -iname '*.hpp' -print0 -o \
 	-iname '*.cpp' -print0 | xargs -0 etags
 
-MDA_test.bin: $(OBJS) Makefile
+MDA_test.bin: $(OBJS) MDA_test.o Makefile
 	@echo "Compiling \""$@"\" from \""$(OBJS)"\""
-	@$(CXX) -o $@ $(OBJS) $(LDFLAGS)
+	@$(CXX) -o $@ MDA_test.o $(OBJS) $(LDFLAGS)
+
+optimize.bin: $(OBJS) optimizer.o Makefile
+	@echo "Compiling \""$@"\" from \""$(OBJS)"\""
+	@$(CXX) -o $@ optimizer.o $(OBJS) $(LDFLAGS)
 
 clean:
 	@echo "deleting temporary, object, and binary files"
