--- a/IDF/kona.cfg
+++ b/IDF/kona.cfg
@@ -4,11 +4,12 @@
 #opt_method = inexact
 #opt_method = reduced
 #opt_method = trust_reduced
-opt_method = verify
+#opt_method = verify
+opt_method = cnstr_reduced
 
 # options related to the outer iterations
-max_iter = 200
-des_tol = 1.e-5 #1.e-6
+max_iter = 1
+des_tol = 1.e-3 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
 
@@ -27,6 +28,7 @@ des_tol = 1.e-1
 #pde_tol = 1.e-6
 pde_tol = 5.e-3 # <-- needed to decrease for numDV = 40 only
 #adj_tol = 1.e-3
+ceq_tol = 1.e-2
 
 # options related to the Quasi-Newton component of the preconditioner
 [quasi_newton]
@@ -50,17 +52,13 @@ max_iter = 20
 product_fac = 300
 nu = 0.95
 krylov_size = 20
-dynamic_tol = true
-bound_type = independent
-bound_frozen = false #true
-bound_approx = true
+dynamic_tol = false
 precond = quasi_newton
-#precond = nested_krylov
 
 # options related to the Krylov iterative solver
 [krylov]
 solver = fgmres #cg #fitr #fgmres
 space_size = 30
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.01
-check_res = false #true
+tolerance = 0.5
+check_res = true
