committing all local changes

--- a/bin/kona.cfg
+++ b/bin/kona.cfg
@@ -1,11 +1,11 @@
 # Kona configuration file for test_kona.cpp
-opt_method = quasi_newton
+#opt_method = quasi_newton
 #opt_method = reduced
-#opt_method = verify
+opt_method = verify
 
 # options related to the outer iterations
 max_iter = 200
-des_tol = 5.e-5 #1.e-6
+des_tol = 1.e-6 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
 
@@ -44,9 +44,9 @@ max_iter = 20
 
 # options related to the reduced-space inexact-Newton algorithm
 [reduced]
-product_fac = 1 #300
+product_fac = 0.0001 #300
 nu = 0.95
-krylov_size = 20
+krylov_size = 100
 dynamic_tol = false #true
 bound_type = guess #independent
 bound_frozen = false #true
