--- a/IDF/kona.cfg
+++ b/IDF/kona.cfg
@@ -13,6 +13,11 @@ des_tol = 1.e-3 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
 
+# options related to the constraints
+[verify]
+dual_vec = true
+cnstr_jac = true
+
 # options related to the trust-region globalization
 [trust]
 max_radius = 1.5
@@ -60,5 +65,5 @@ precond = quasi_newton
 solver = fgmres #cg #fitr #fgmres
 space_size = 30
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.5
+tolerance = 0.5 #0.5
 check_res = true
