--- a/bin/kona.cfg
+++ b/bin/kona.cfg
@@ -1,13 +1,17 @@
 # Kona configuration file for test_kona.cpp
-#opt_method = quasi_newton
+opt_method = quasi_newton
 #opt_method = reduced
-opt_method = verify
+#opt_method = verify
 
 # options related to the outer iterations
 max_iter = 200
 des_tol = 1.e-6 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
+
+# options related to verifcation
+[verify]
+red_grad = true
 
 # options related to the trust-region globalization
 [trust]
@@ -59,5 +63,5 @@ precond = quasi_newton
 solver = fgmres #cg #fitr #fgmres
 space_size = 30
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.01
+tolerance = 0.1
 check_res = true
