latest changes to IDF

--- a/IDF/kona.cfg
+++ b/IDF/kona.cfg
@@ -12,11 +12,13 @@ max_iter = 1
 des_tol = 1.e-6 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
+ceq_tol = 1.e-3
 
 # options related to the constraints
 [verify]
 dual_vec = true
 cnstr_jac = true
+red_grad = true
 
 # options related to the trust-region globalization
 [trust]
@@ -25,7 +27,7 @@ init_radius = 1.0
 
 # options related to the inner homotopy/continuation iterations
 [inner]
-max_iter = 500 #50 #10
+max_iter = 100 #500 #50 #10
 lambda_init = 0.0 #0.0 #0.5
 #des_tol = 1.e-2 # used for LNKS originally
 #des_tol = 1.e-5
@@ -65,5 +67,5 @@ precond = quasi_newton
 solver = fgmres #cg #fitr #fgmres
 space_size = 30
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.01 #0.5
+tolerance = 0.01
 check_res = true
