--- a/bin/kona.cfg
+++ b/bin/kona.cfg
@@ -1,6 +1,6 @@
 # Kona configuration file for test_kona.cpp
-#opt_method = quasi_newton
-opt_method = reduced
+opt_method = quasi_newton
+#opt_method = reduced
 #opt_method = verify
 
 # options related to the outer iterations
