preliminary IDF working

--- a/IDF/Makefile
+++ b/IDF/Makefile
@@ -10,8 +10,8 @@ SHELL = /bin/sh
 CXX= gcc 
 
 # c preprocessor options
-#CPPFLAGS= -cpp -DNDEBUG -DBOOST_UBLAS_ENABLE_PROXY_SHORTCUTS -DBOOST_UBLAS_TYPE_CHECK=0
-CPPFLAGS= -cpp -DDEBUG -DBOOST_UBLAS_ENABLE_PROXY_SHORTCUTS
+CPPFLAGS= -cpp -DNDEBUG -DBOOST_UBLAS_ENABLE_PROXY_SHORTCUTS -DBOOST_UBLAS_TYPE_CHECK=0
+#CPPFLAGS= -cpp -DDEBUG -DBOOST_UBLAS_ENABLE_PROXY_SHORTCUTS
 
 # compiler options that may vary (user can change)
 #CXXFLAGS= -g
