--- a/IDF/kona.cfg
+++ b/IDF/kona.cfg
@@ -6,9 +6,10 @@
 #opt_method = trust_reduced
 #opt_method = verify
 opt_method = cnstr_reduced
+#opt_method = aug_lag
 
 # options related to the outer iterations
-max_iter = 1
+max_iter = 50
 des_tol = 1.e-6 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
@@ -22,8 +23,13 @@ red_grad = true
 
 # options related to the trust-region globalization
 [trust]
-max_radius = 1.5
-init_radius = 1.0
+max_radius = 0.2 #0.25
+init_radius = 0.1 #0.25
+tol = -0.01
+
+# options related to the augmented Lagrangian
+[aug_lag]
+mu_init = 10.0 # 0.01 used this value with trisqp
 
 # options related to the inner homotopy/continuation iterations
 [inner]
@@ -58,14 +64,14 @@ max_iter = 20
 [reduced]
 product_fac = 300
 nu = 0.95
-krylov_size = 30
+krylov_size = 60
 dynamic_tol = false
-precond = quasi_newton
+precond = idf_schur #none #   nested_krylov #    quasi_newton # 
 
 # options related to the Krylov iterative solver
 [krylov]
-solver = fgmres #cg #fitr #fgmres
-space_size = 60
+solver = trisqp #  fitr #  fgmres # 
+space_size = 10
 #tolerance = 0.1 # used for reduced-space NK
 tolerance = 0.1
 check_res = true
