--- a/MDF/kona.cfg
+++ b/MDF/kona.cfg
@@ -1,6 +1,7 @@
 # Kona configuration file for test_kona.cpp
 #opt_method = quasi_newton
-opt_method = reduced
+#opt_method = reduced
+opt_method = trust_reduced
 #opt_method = verify
 
 # options related to the outer iterations
@@ -15,8 +16,9 @@ red_grad = true
 
 # options related to the trust-region globalization
 [trust]
-max_radius = 1.5
-init_radius = 1.0
+max_radius = 0.4
+init_radius = 0.2
+tol = -0.01
 
 # options related to the inner homotopy/continuation iterations
 [inner]
@@ -48,20 +50,21 @@ max_iter = 20
 
 # options related to the reduced-space inexact-Newton algorithm
 [reduced]
-product_fac = 0.0001 #300
+product_fac = 1e-7 #1e-4 #300
 nu = 0.95
-krylov_size = 100
+krylov_size = 20
 dynamic_tol = false #true
 bound_type = guess #independent
 bound_frozen = false #true
 bound_approx = true
+#precond = none
 precond = quasi_newton
 #precond = nested_krylov
 
 # options related to the Krylov iterative solver
 [krylov]
-solver = fgmres #cg #fitr #fgmres
+solver = cg # fitr #fgmres  # cg #fgmres
 space_size = 30
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.1
+tolerance = 0.5
 check_res = true
