--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "linear_elastic_csm"]
 	path = linear_elastic_csm
 	url = git@bitbucket.org:odl/linear-elasticity-csm.git
+[submodule "quasi1d-euler"]
+	path = quasi1d-euler
+	url = git@bitbucket.org:odl/quasi1d-euler.git
+[submodule "linear-elasticity-csm"]
+	path = linear-elasticity-csm
+	url = git@bitbucket.org:odl/linear-elasticity-csm.git
