made IDF/kona.cfg consistent with changes to kona

--- a/IDF/kona.cfg
+++ b/IDF/kona.cfg
@@ -29,7 +29,7 @@ tol = -0.01
 
 # options related to the augmented Lagrangian
 [aug_lag]
-mu_init = 10.0 # 0.01 used this value with trisqp
+mu_init = 1.0 # 0.01 used this value with trisqp
 
 # options related to the inner homotopy/continuation iterations
 [inner]
@@ -66,12 +66,12 @@ product_fac = 300
 nu = 0.95
 krylov_size = 60
 dynamic_tol = false
-precond = idf_schur #none #   nested_krylov #    quasi_newton # 
+precond = idf_schur # none #   nested_krylov #    quasi_newton # 
 
 # options related to the Krylov iterative solver
 [krylov]
-solver = trisqp #  fitr #  fgmres # 
+solver = fgmres # ffom # trisqp #  fitr #  
 space_size = 10
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.05
-check_res = true
+tolerance = 0.5 # 0.001 # 
+check_res = false #true
