fixed url for linear_elastic_csm module

--- a/IDF/kona.cfg
+++ b/IDF/kona.cfg
@@ -14,6 +14,7 @@ des_tol = 1.e-6 #1.e-6
 pde_tol = 1.e-6
 adj_tol = 1.e-6
 ceq_tol = 1.e-3
+init_merit_param = 1.0
 
 # options related to the constraints
 [verify]
@@ -23,8 +24,8 @@ red_grad = true
 
 # options related to the trust-region globalization
 [trust]
-max_radius = 0.2 #0.25
-init_radius = 0.1 #0.25
+max_radius = 2.0 #0.25
+init_radius = 1.0 #0.25
 tol = -0.01
 
 # options related to the augmented Lagrangian
@@ -51,27 +52,29 @@ matvec_update = false # update quasi-Newton method during matvecs
 
 # options related to the line search
 [line_search]
-type = wolfe #backtrack #wolfe
+type = backtrack #wolfe
 alpha_init = 1.0
 alpha_min = 1.e-15
 alpha_max = 1000.0
-reduct_fac = 0.5
-sufficient = 1.e-6
+reduct_fac = 0.1
+sufficient = 1.e-4
 curv_cond = 0.999
 max_iter = 20
 
 # options related to the reduced-space inexact-Newton algorithm
 [reduced]
 product_fac = 300
-nu = 0.95
+nu = 1.0
 krylov_size = 60
 dynamic_tol = false
-precond = idf_schur # none #   nested_krylov #    quasi_newton # 
+precond = idf_schur #   nested_krylov #    quasi_newton # 
 
 # options related to the Krylov iterative solver
 [krylov]
-solver = fgmres # ffom # trisqp #  fitr #  
+solver = fisqp #ffom #ffom_smart #fgmres # ffom # trisqp #  fitr #  
 space_size = 10
 #tolerance = 0.1 # used for reduced-space NK
-tolerance = 0.5 # 0.001 # 
-check_res = false #true
+#tolerance = 0.01 # 0.001 # 
+tolerance = 0.5 #0.5
+dual_tol = 0.5
+check_res = true # false #
