--- a/MDF/kona.cfg
+++ b/MDF/kona.cfg
@@ -16,8 +16,8 @@ red_grad = true
 
 # options related to the trust-region globalization
 [trust]
-max_radius = 0.4
-init_radius = 0.2
+max_radius = 2.0
+init_radius = 1.0
 tol = -0.01
 
 # options related to the inner homotopy/continuation iterations
@@ -63,8 +63,8 @@ precond = quasi_newton
 
 # options related to the Krylov iterative solver
 [krylov]
-solver = cg # fitr #fgmres  # cg #fgmres
-space_size = 30
+solver = cg #fgmres  #fitr # cg #  fgmres
+space_size = 10
 #tolerance = 0.1 # used for reduced-space NK
 tolerance = 0.5
 check_res = true
