UserSolver objects updated to the new Kona changes

--- a/IDF/Makefile
+++ b/IDF/Makefile
@@ -13,7 +13,7 @@ PYTHON_INCLUDES=$(shell $(PYTHON-CONFIG) --includes)
 PYTHON_LIBS=-L$(shell $(PYTHON-CONFIG) --prefix)/lib $(shell $(PYTHON-CONFIG) --libs)
 
 # get boost options
-BOOST_PREFIX=/users/denera/Developer
+BOOST_PREFIX=/fasttmp/denera/miniconda2
 BOOST_INCLUDES=-I$(BOOST_PREFIX)/include
 BOOST_LIBS=-L$(BOOST_PREFIX)/lib -lboost_program_options -lboost_python
 
@@ -25,7 +25,7 @@ CXX= g++
 CPPFLAGS= -cpp -DNDEBUG -DBOOST_UBLAS_ENABLE_PROXY_SHORTCUTS -DBOOST_UBLAS_TYPE_CHECK=0
 
 # compiler options that may vary (user can change)
-CXXFLAGS= -g -fPIC -O3
+CXXFLAGS= -g -fPIC -O3 # -fpermissive
 
 # linker options
 #LDFLAGS= -lm -lstdc++ -llapack -L. -L$(BOOST_ROOT)/lib -lboost_program_options  -L$#(KONA_ROOT) -lkona
