Generalization of cmake build system to multi-platform

--- a/IDF/CMakeLists.txt
+++ b/IDF/CMakeLists.txt
@@ -1,17 +1,40 @@
 cmake_minimum_required(VERSION 3.6)
 project(IDF)
 
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
+# get Python and Boost library info from system
+execute_process(COMMAND python-config --prefix
+        OUTPUT_VARIABLE Python_PREFIX
+        OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fPIC -O3 -fpermissive")
+execute_process(COMMAND python-config --ldflags
+        OUTPUT_VARIABLE Python_LIBS
+        OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-set(CMAKE_SHARED_LINKER_FLAGS "-shared -fPIC -Wl,-install_name,aerostruct_idf.so -framework CoreFoundation -lpython2.7 -ldl -lm -lstdc++ -llapack -lblas -lboost_program_options -lboost_python")
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    set(LDFLAGS "-z,defs,-soname")
+    set(CPP "-cpp")
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    set(LDFLAGS "-install_name")
+    set(CPP "")
+    if(NOT EXISTS "${Python_PREFIX}/include/python2.7/pyport.h.orig")
+        execute_process(COMMAND cp ${Python_PREFIX}/include/python2.7/pyport.h ${Python_PREFIX}/include/python2.7/pyport.h.orig)
+    endif()
+    execute_process(COMMAND patch -p1 -N ${Python_PREFIX}/include/python2.7/pyport.h ../patch_pyport.h.diff)
+endif()
 
+set(CMAKE_CXX_FLAGS "${CPP} ${CMAKE_CXX_FLAGS} -g -fPIC -O3 -fpermissive")
+
+set(Boost_LIBS "-lboost_python -lboost_program_options")
+
+set(BASE_LIBS "-lm -lstdc++ -lblas -llapack")
+
+set(CMAKE_SHARED_LINKER_FLAGS 
+        "-shared -fPIC -Wl,${LDFLAGS},aerostruct_idf.so ${BASE_LIBS} ${Python_LIBS} ${Boost_LIBS}")
+
+# source files to compile
 set(SOURCE_FILES
         aerostruct_idf.cpp
         aerostruct_idf.hpp
-        ../LECSM/test_problem/Makefile
-        ../LECSM/test_problem/test_problem.cpp
         ../LECSM/1D_mesh_tools.cpp
         ../LECSM/1D_mesh_tools.hpp
         ../LECSM/lecsm.cpp
@@ -39,20 +62,25 @@ set(SOURCE_FILES
         ../krylov.hpp
         ../krylov_def.hpp)
 
+# C preprocessor macros
 add_definitions(-DNDEBUG)
 add_definitions(-DBOOST_UBLAS_ENABLE_PROXY_SHORTCUTS)
 add_definitions(-DBOOST_UBLAS_TYPE_CHECK=0)
 
+# include dirs
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 include_directories(
         AFTER
-        /Users/denera/Developer/miniconda2/include
-        /Users/denera/Developer/miniconda2/include/python2.7
-        /Users/denera/Developer/miniconda2/lib/python2.7/site-packages/PyUblas-2013.1-py2.7-macosx-10.6-x86_64.egg/pyublas/include
-        /Users/denera/Developer/miniconda2/lib/python2.7/site-packages/numpy/core/include)
+        ${Python_PREFIX}/include
+        ${Python_PREFIX}/include/python2.7
+        ${Python_PREFIX}/lib/python2.7/site-packages/PyUblas-2013.1-py2.7-macosx-10.6-x86_64.egg/pyublas/include
+        ${Python_PREFIX}/lib/python2.7/site-packages/numpy/core/include)
 
+# library link dirs
 link_directories(
-        /Users/denera/Developer/miniconda2/lib)
+        ${Python_PREFIX}/lib)
 
+# build target
 add_library(aerostruct_idf SHARED ${SOURCE_FILES})
 
 set_target_properties(
