--- a/IDF/.gitignore
+++ b/IDF/.gitignore
@@ -3,7 +3,8 @@
 # Lines that start with '#' are comments.
 
 # ignore object files and modules
-*.[o]
+*.o
+*.so
 *.mod
 
 # ignore temporary files created by emacs, etc.
@@ -40,6 +41,7 @@
 
 # CLion build system stuff
 CMakeFiles/*
+CMakeCache.txt
 *.cmake
 
 # generated Makefile
